// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-sc-13eisiu-0 eeWRQM"
>
  <h1
    class="profiles__Title-sc-13eisiu-1 ksESXg"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-13eisiu-2 bjSEHX"
  >
    <li
      class="profiles__Item-sc-13eisiu-5 boKOsJ"
    >
      <img
        class="profiles__Picture-sc-13eisiu-4 gPzfVQ"
        data-testid="profile-picture"
        src="/images/users//images/img.png.png"
      />
      <p
        class="profiles__Name-sc-13eisiu-3 fbvKXX"
      >
        Joker
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-sc-13eisiu-0 eeWRQM"
>
  <h1
    class="profiles__Title-sc-13eisiu-1 ksESXg"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-13eisiu-2 bjSEHX"
  >
    <li
      class="profiles__Item-sc-13eisiu-5 boKOsJ"
    >
      <img
        class="profiles__Picture-sc-13eisiu-4 gPzfVQ"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-sc-13eisiu-3 fbvKXX"
      >
        ahmed
      </p>
    </li>
  </ul>
</div>
`;
